k8s/headlamp/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /headlamp
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 4466
